<resources>
    <string name="app_name">Krushimitra</string>

    <string name="default_web_client_id">
    1234567890-abcxyz.apps.googleusercontent.com
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="email_username">Email / Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pune_india">Pune, India</string>
    <string name="API_KEY">1ecef33a983ec135fdd1f42844a86496</string>



</resources>